--- a/agents/agent_v_1_0/JupyterNotebook/GraphRaG_Neo4j.ipynb
+++ b/agents/agent_v_1_0/JupyterNotebook/GraphRaG_Neo4j.ipynb
@@ -10,6 +10,8 @@
     "import os\n",
     "from IPython.display import Image, display\n",
     "\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langgraph.prebuilt import create_react_agent\n",
@@ -21,12 +23,21 @@
     "from langchain_community.vectorstores import Neo4jVector\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
+    "load_dotenv()\n",
+    "\n",
+    "openai_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "langchain_key = os.getenv(\"LANGCHAIN_API_KEY\")\n",
+    "neo4j_uri = os.getenv(\"NEO4J_URI\")\n",
+    "neo4j_user = os.getenv(\"NEO4J_USERNAME\")\n",
+    "neo4j_password = os.getenv(\"NEO4J_PASSWORD\")\n",
+    "\n",
+    "\n",
     "# Initialize model\n",
     "model = ChatOpenAI(\n",
     "    model=\"gpt-4o\",\n",
     "    temperature=0.0,\n",
     "    max_tokens=1000,\n",
-    "    #api_key=os.getenv(\"OPENAI_API_KEY\")\n",
+    "    api_key=openai_key\n",
     ")\n",
     "\n",
     "def create_neo4j_tools():\n",
@@ -34,9 +45,9 @@
     "    \n",
     "    # Initialize Neo4j connection\n",
     "    graph = Neo4jGraph(\n",
-    "        #url=os.getenv(\"NEO4J_URI\"),\n",
-    "        #username=os.getenv(\"NEO4J_USERNAME\"),\n",
-    "        #password=os.getenv(\"NEO4J_PASSWORD\")\n",
+    "        url=neo4j_uri,\n",
+    "        username=neo4j_user,\n",
+    "        password=neo4j_password\n",
     "    )\n",
     "    \n",
     "    # Create Text2Cypher chain\n",
