added schema retrieval

--- a/agents/agent_v_1_0/JupyterNotebook/GraphRaG_Neo4j.ipynb
+++ b/agents/agent_v_1_0/JupyterNotebook/GraphRaG_Neo4j.ipynb
@@ -7,6 +7,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jprob\\AppData\\Local\\Temp\\ipykernel_15536\\782783097.py:41: LangChainDeprecationWarning: The class `Neo4jGraph` was deprecated in LangChain 0.3.8 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-neo4j package and should be used instead. To use it run `pip install -U :class:`~langchain-neo4j` and import as `from :class:`~langchain_neo4j import Neo4jGraph``.\n",
+      "  graph = Neo4jGraph(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -123,7 +131,7 @@
     "        Returns node labels, relationship types, and property information.\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            schema_info = graph.get_schema\n",
+    "            schema_info = graph.get_schema()\n",
     "            return f\"Neo4j Database Schema:\\n{schema_info}\"\n",
     "        except Exception as e:\n",
     "            return f\"Error retrieving database schema: {str(e)}\"\n",
@@ -397,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "f3eaa181",
    "metadata": {},
    "outputs": [
@@ -406,7 +414,7 @@
      "output_type": "stream",
      "text": [
       "Schema Test Result:\n",
-      "It seems there was an issue retrieving the current database schema from the Neo4j graph database. If you have specific questions or need assistance with a particular query related to the database, please let me know, and I'll do my best to assist you.\n"
+      "I encountered a technical issue while trying to retrieve the current database schema from the Neo4j graph database. Unfortunately, I'm unable to provide the schema details at this moment. If you have specific questions or need assistance with a particular query, please let me know, and I'll do my best to help with the information available.\n"
      ]
     }
    ],
